# bazar_market_back

./: .env-example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6f1fc7c22f60_add_password_hash_and_is_verified_to_.py  86e34d21b431_inital_migrations.py  c45b43175e33_add_permissions_column_to_users.py
frontend/: package-lock.json
scripts/: seed_admin.py
src/api/: app.py  dependencies.py
src/api/middlewares/: responseTimeMiddleware.py
src/api/routes/health/: health.py
src/bot/: .boundless.yml  .dockerignore  .env.example  .gitignore  alembic.ini  docker-compose.yml  main.py
src/bot/bot/handlers/: __init__.py  echo.py  start.py
src/bot/bot/keyboards/: main_menu.py
src/bot/core/: config.py
src/bot/database/models/: base.py  user.py
src/bot/migrations/: env.py
src/bot/webhook/: app.py
src/core/: enums.py  exceptions.py
src/core/dto/: auth.py  user.py
src/core/interfaces/: user_interface.py
src/core/services/: auth_service.py  user_service.py
src/core/use_cases/: user_use_cases.py
src/db/: base.py  session.py
src/db/models/: __init__.py  analytics.py  audit.py  cart.py  catalog.py  delivery.py  notification.py  order.py  payment.py  settings.py  social.py  user.py
src/helpers/: helpers.py
src/infrastructure/: config.py  di.py  redis.py
src/repositories/: __init__.py  analytics_repo.py  audit_repo.py  base.py  cart_repo.py  catalog_repo.py  delivery_repo.py  notification_repo.py  order_repo.py  payment_repo.py  settings_repo.py  social_repo.py  user_repo.py
(+6 files in other folders)
